# DSL_Z3_testgenerator

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DSL_GUIDE.md  GITHUB_SETUP.md  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  Makefile  OPTIMIZATION_SUMMARY.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SETUP_GUIDE.md  USER_GUIDE.md  comprehensive_test_evaluation.py  directory_structure.md  dispatch_extended_tests.json  dispatch_system_complete.yaml  dsl2test.py  evaluate_test_quality.py  evaluate_v8_generator.py  extended_tests.json  final_optimization_report.md  final_optimization_summary.md  generate_extended.py  main.py  pyproject.toml  requirements-dev.txt  round1_analysis.md  setup.cfg  setup.py  test_all_requirements_v5.py  test_all_requirements_v6.py  test_all_requirements_v7.py  test_complete.json  test_out.json  (+4 more)
.github/workflows/: ci.yml  release.yml
archive/v1.0/analysis/: architecture_improvement_plan.md  critical_issues_found.md  education_system_requirements.md  education_system_test_evaluation.md  final_strict_evaluation.md  final_verdict.md  insurance_test_analysis.md  optimization_summary.md  strict_evaluation_report.md  test_generation_issues_report.md
archive/v1.0/debug/: debug_rules.py  test_enhanced_engine.py
archive/v1.0/demo_outputs/: education_tests.json  education_tests_optimized.json  hotel_final.json  hotel_tests.json  hotel_tests_final.json  hotel_tests_fixed.json  hotel_tests_new.json  insurance_final.json  insurance_smart_test.json  insurance_smart_v2.json
config/uv/: config.toml
configs/: test_config_v3.json
debug/: debug_constraints.py
demo/examples/: hotel_booking_system.yaml  insurance_claim_system.yaml  online_education_system.yaml
demo/outputs/: enhanced_complete_test_suite.json  insurance_test_final.json
docs/: API_REFERENCE.md  Chinese_Support.md  DSL_REFERENCE.md  README.md  TROUBLESHOOTING.md  business_rules_enhancement_plan.md  v8_architecture_improvements.md  中文需求转DSL指南.md
docs/round1/: round1_evaluation_report.md  round1_summary.md
docs/round2/: round2_evaluation_report.md  round2_summary.md
docs/round3/: round3_evaluation_report.md  round3_plan.md  round3_summary.md
examples/: bank_account.yaml  cleaning_dispatch.yaml  dispatch_system.yaml  shopping_cart.yaml  student_system_mixed.yaml  tecn_dispatch.yaml
examples/advanced/: advanced_ecommerce.yaml  order_processing_system.yaml  user_account_system.yaml
examples/basic/: simple_arrays.yaml
outputs/v2/: user_account.json  user_account_test.py
outputs/v3/: advanced_ecommerce_v3.json  user_account_v3.json
outputs/v5/: advanced_ecommerce_v5.json  evaluation_report_round1.json  order_processing_system_v5.json  permission_system_v5.json  shopping_cart_v5.json  simple_arrays_v5.json  student_system_mixed_v5.json  user_account_system_v5.json
outputs/v6/: evaluation_report_round2.json  shopping_cart_v6.json  simple_arrays_v6.json
outputs/v7/: advanced_ecommerce_v7.json  evaluation_report_round3.json  order_processing_system_v7.json  permission_system_v7.json  shopping_cart_v7.json  simple_arrays_v7.json  student_system_mixed_v7.json  user_account_system_v7.json
redesign/: architecture_v2.md  comparison_v1_v2.md  core_prototype.py  v2_implementation_plan.md
src/: __init__.py
src/cli/: __init__.py  evaluate.py  generate.py
src/core/: combination_engine.py  concrete_value_generator.py
src/dsl_test_generator/: __init__.py  cli.py  config.py
src/dsl_test_generator/core/: __init__.py  constraint_translator.py  engine.py  enhanced_engine.py  z3_solver.py
src/dsl_test_generator/generators/: __init__.py  collection_generator.py  domain_aware_test_generator.py  enhanced_test_generator.py  smart_test_generator.py  test_generator.py
src/dsl_test_generator/parsers/: __init__.py  dsl_parser.py  yaml_parser.py
src/dsl_test_generator/types/: __init__.py  models.py  validators.py
src/dsl_test_generator/validators/: __init__.py  business_logic_validator.py
src/evaluators/: __init__.py  quality_scorer.py  test_evaluator.py  version_comparator.py
src/generators/: __init__.py  executable_test_generator.py  v1_generator.py  v2_generator.py  v3_generator.py  v5_generator.py  v6_generator.py  v7_generator.py  v8_practical.py  v8_simplified.py
src/generators/v8/: __init__.py  constraint_handler.py  core.py  generic_constraint_test_strategy.py  main.py  models.py  models_extended.py  parser.py  parser_extended.py  scenario_test_strategy.py  semantic_value_generator.py  state_transition_strategy.py  test_strategies.py  timed_constraint_strategy.py  value_generator.py
src/generators/v8_extended/: __init__.py  extended_test_generator.py
src/generators/v8_improved/: __init__.py  boundary_test_strategy.py  constraint_validator.py  enhanced_constraint_solver.py  improved_test_generator.py  negative_test_strategy.py  type_aware_value_generator.py
src/generators/v8_modular/: __init__.py  business_rules.py  constraint_solver.py  expression_parser.py  test_strategies.py  value_generators.py
src/utils/: logger.py
test_outputs/: v8_evaluation_report.json  v8_shopping_cart.json  v8_shopping_cart_fixed.json
test_outputs/v8_batch/: v8_advanced_ecommerce.json  v8_order_processing_system.json  v8_permission_system.json  v8_shopping_cart.json  v8_simple_arrays.json  v8_student_system_mixed.json  v8_user_account_system.json
tests/: __init__.py  test_parser.py  test_types.py
v2.0/: README.md  dsl2test.py  dsl2test_advanced.py  requirements.txt
v2.0/docs/: deep_evaluation_report.md  v2_improvements.md
v2.0/examples/: simple_test.yaml
v2.0/src/: __init__.py
v2.0/src/core/: __init__.py  models.py  test_generator.py
v2.0/src/layers/: __init__.py  constraint_solver.py  dsl_parser.py  expression_parser.py
v2.0/src/strategies/: __init__.py  advanced_test_planner.py  combination_analyzer.py  pairwise_test_planner.py  test_planner.py
v2.0/src/utils/: __init__.py  output_formatter.py
